# wordle_solver

./: Cargo.toml  wordmaster.txt
src/: default.txt  main.rs
