[package]
name = "wordle_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-std = { version = "1.11.0", features = ["attributes"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
surf = "2.3.2"
